# cuda_demo

./: .gitignore  README.md
cudnn_demo/: sum_version1.cpp
demo/CUDA_Test/: CUDA_Test.cpp  bgr2bgr565.cpp  bgr2bgr565.cu  bgr2gray.cpp  calculate_histogram.cpp  calculate_histogram.cu  common.cpp  common.hpp  dot_product.cpp  dot_product.cu  funset.cpp  funset.cu  funset.hpp  green_ball.cu  heat_conduction.cpp  heat_conduction.cu  histogram_equalization.cpp  histogram_equalization.cu  image_normalize.cpp  image_normalize.cu  image_reverse.cpp  image_reverse.cu  julia.cpp  julia.cu  laplacian.cu  layer_channel_normalize.cpp  layer_channel_normalize.cu  layer_prior_vbox.cpp  layer_prior_vbox.cu  layer_reverse.cpp  long_vector_add.cu  matrix_mul.cu  ray_tracking.cpp  ray_tracking.cu  ripple.cpp  ripple.cu  simple.cpp  simple.cu  simple.hpp  streams.cu  (+2 more)
demo/TensorRT_Test/: TensorRT_Test.cpp  charrnn.cpp  common.hpp  funset.hpp  googlenet.cpp  mnist.cpp  mnist_api.cpp  mnist_infer.cpp  plugin.cpp
demo/win_test/: book.h  funset.cu  funset.cuh  gl_helper.h  kernel.cu  testCUDA.cu
demo/win_test/GL/: glut.h
demo_cuda_test/: CUDA_Test.cpp  bgr2gray.cu  calculate_histogram.cpp  calculate_histogram.cu  common.hpp  device_info.cu  green_ball.cpp  histogram_equalization.cpp  julia.cu  laplacian.cpp  layer_reverse.cu  long_vector_add.cpp  long_vector_add.cu  matrix_mul.cpp  ray_tracking.cu  ripple.cu  streams.cpp  streams.cu  vector_add.cu
demo_extern/: Makefile  common_c.cpp  common_c.h  common_cuda.cu  common_cuda.h  main.cpp  task1.cu  task1.h  test
demo_function/: Makefile  cpu_bitmap.h  funset.cu  funset.h  gl_helper.h  main.cu
demo_function/cache/: funset.cu  funset.h  testCUDA.cu
helloword/: Makefile  main.cu  test
prj/linux_cmake/: ReadMe.txt
prj/linux_cuda_cmake/: CMakeLists.txt  ReadMe.txt
prj/linux_tensorrt_cmake/: CMakeLists.txt  ReadMe.txt
prj/x86_x64_vc12/: CUDA.sln
prj/x86_x64_vc12/CUDA/: CUDA.sln
prj/x86_x64_vc12/CUDA_Test/: CUDA_Test.vcxproj  CUDA_Test.vcxproj.filters
src/: README
tensorRT_test/: charrnn.cpp  mnist.cpp  mnist_api.cpp  plugin.cpp
test_data/models/: googlenet.prototxt
test_speed/: main.cu  test
(+1 files in other folders)
